syntax = "proto3";
package database_monitoring.v1;
option go_package = "github.com/guilhermearpassos/database_monitoring_v1;dbmv1";
import "database_monitoring/v1/snapshot.proto";


message ExecutionPlan {
  bytes plan_handle = 1;
  ServerMetadata server = 2;
  string xml_plan = 3;
}